[package]
name = "lambda-delta-optimize"
version = "0.1.0"
author = "R Tyler Croy <rtyler@brokenco.de>"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.7" }
deltalake = { git = "https://github.com/delta-io/delta-rs", branch = "main", features = ["arrow", "parquet", "s3"]}
lambda_runtime = { version = "0.7" }
log = "0.4"
pretty_env_logger = "0.4"
rusoto_core = { version = "*", default-features = false, features = ["rustls"] }
rusoto_credential = "*"
rusoto_s3 = { version = "*", default-features = false, features = ["rustls"]}
serde = { version = "*", features = ["rc"]}
serde_json = "1"
tokio = { version = "1", features = ["macros"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
